# riff_raft

./: Makefile.in  README.md  configure  configure.ac
examples/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  common.c  follower.c  list.c  riff_raft.c
src/include/: common.h  follower.h  list.h  riff_raft.h  util.h
test/: Makefile.am  Makefile.in  test_handle_append_entry.c  test_list.c  test_riff_raft.c
