check_PROGRAMS = test_list test_handle_append_entry test_riff_raft
test_list_SOURCES = test_list.c
test_list_LDADD = ../src/libriff_raft-1.0.la
test_handle_append_entry_SOURCES = test_handle_append_entry.c
test_handle_append_entry_LDADD = ../src/libriff_raft-1.0.la
test_riff_raft_SOURCES = test_riff_raft.c
test_riff_raft_LDADD = ../src/libriff_raft-1.0.la
TESTS = test_list test_handle_append_entry test_riff_raft
